<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@drawable/white_rectangel">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guideLine1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guideLine2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.24"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guideLine3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guideLine4"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guideLine5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guideLine7"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.57"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guideLine6"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guideLine1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guideLine2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guideLine3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/type_text_view"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/orange"
        android:text="@string/type"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine5"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine6"
        app:layout_constraintBottom_toTopOf="@id/number_text_view">
    </TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/number_text_view"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/orange"
        android:text="@string/num"
        app:layout_constraintTop_toBottomOf="@id/type_text_view"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine5"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine6"
        app:layout_constraintBottom_toTopOf="@id/price_text_view">
    </TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/price_text_view"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/orange"
        android:text="@string/price2"
        app:layout_constraintTop_toBottomOf="@id/number_text_view"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine5"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine6"
        app:layout_constraintBottom_toTopOf="@id/date_text_view">
    </TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/date_text_view"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/orange"
        android:text="@string/date2"
        app:layout_constraintTop_toBottomOf="@id/price_text_view"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine5"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine6"
        app:layout_constraintBottom_toBottomOf="parent">
    </TextView>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/type_text_view2"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/estimation2"
        android:gravity="start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine3"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine4"
        app:layout_constraintBottom_toTopOf="@id/number_text_view2">
    </TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/number_text_view2"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/actual_number"
        android:gravity="right"
        app:layout_constraintTop_toBottomOf="@id/type_text_view2"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine3"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine4"
        app:layout_constraintBottom_toTopOf="@id/cost_text_view2">
    </TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cost_text_view2"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/cost"
        android:gravity="right"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/number_text_view2"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine7"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine4"
        app:layout_constraintBottom_toTopOf="@id/date_text_view2">
    </TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/amount_text_view"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/orange"
        android:text="@string/amount"
        app:layout_constraintTop_toTopOf="@id/cost_text_view2"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine3"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine7"
        app:layout_constraintBottom_toBottomOf="@id/cost_text_view2">
    </TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/date_text_view2"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/time"
        android:gravity="right"
        app:layout_constraintTop_toBottomOf="@id/cost_text_view2"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine3"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine4"
        app:layout_constraintBottom_toBottomOf="parent">
    </TextView>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/icon_image_view"
        android:contentDescription="@string/icon"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideLine1"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideLine2"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine1"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine2">
    </ImageView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/description_text_view"
        android:textStyle="normal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:text="@string/paid2"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideLine3"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideLine1"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideLine2">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>