<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guide_line1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guide_line2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guide_line3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guide_line4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guide_line5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guide_line6"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guide_line7"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontal_guide_line8"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guide_line1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guide_line2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/logo_image_view"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/logo_description"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_line1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_line2"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/special_number_edit_text"
        android:drawableEnd="@drawable/ic_user"
        android:background="@drawable/rectangel"
        android:hint="@string/الرقم_المميز"
        android:drawablePadding="15dp"
        android:textColorHint="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_line3"
        app:layout_constraintLeft_toRightOf="@id/vertical_guide_line1"
        app:layout_constraintRight_toLeftOf="@id/vertical_guide_line2"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_line4"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/password_edit_text"
        android:drawableEnd="@drawable/ic_surface1"
        android:background="@drawable/rectangel"
        android:hint="@string/كلمه_المرور"
        android:drawablePadding="15dp"
        android:textColorHint="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_line4"
        app:layout_constraintLeft_toRightOf="@id/vertical_guide_line1"
        app:layout_constraintRight_toLeftOf="@id/vertical_guide_line2"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_line5"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remember_me_text_view"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginEnd="5dp"
        android:text="@string/remember_me"
        app:layout_constraintTop_toTopOf="@+id/forget_password_text_view"
        app:layout_constraintBottom_toBottomOf="@id/forget_password_text_view"
        app:layout_constraintRight_toLeftOf="@id/remember_me_check_box"/>

    <CheckBox
        android:id="@+id/remember_me_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/checkbox_selector"
        android:buttonTint="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/remember_me_text_view"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_line6"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_line7"
        app:layout_constraintRight_toLeftOf="@id/vertical_guide_line2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_password_text_view"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/forget_password"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_line6"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_line7"
        app:layout_constraintLeft_toRightOf="@id/vertical_guide_line1"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/enter_btn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/enter"
        android:background="@drawable/round_shape"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide_line7"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide_line8"
        app:layout_constraintLeft_toRightOf="@id/vertical_guide_line1"
        app:layout_constraintRight_toLeftOf="@id/vertical_guide_line2"/>

</androidx.constraintlayout.widget.ConstraintLayout>